fixed flex so that all the data in the right column is top aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ h3 {
 #right-column {
     display:flex;
     flex-wrap:wrap;
+    align-self:flex-start;
 }
 
 #oneDayCardEl {
@@ -87,7 +88,7 @@ h3 {
 
 .fiveDayCard {
     white-space:pre;
-    flex:1 0 auto;
+    flex:0 0 auto;
     padding:10px;
     background-color:#80d0ff;
 }
